@@ -1,3 +1,8 @@
+JO-2007-05-28-0: RFE:         DBW MySql query Average Job Turnaround Time causes exception
+                 Bugster:     6556411
+                 Changed:     MySql, Oracle queries in reporting
+                 Review:      AP
+
 JO-2007-05-23-0: RFE:         Arco should support webconsole 3.0.x
                  Bugster:     6481737
                  Changed:     arcorun, inst_reporting, build.xml, build.properties,
